[package]
name = "n82k"
version = "0.1.1"
edition = "2021"

[dependencies]
num-traits = "0.2"
num-integer = "0.1"
num-bigint = "0.4"

[lints.clippy]
#cargo = "warn"
pedantic = "warn"
nursery = "warn"
unwrap_used = "warn"
float_arithmetic = "forbid"
float_cmp = "forbid"
large_include_file = "forbid"

[lints.rust]
unsafe_code = "deny"

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"
